update teaching and people pages

--- a/_pages/ans490f19.md
+++ b/_pages/ans490f19.md
@@ -51,7 +51,8 @@ The main objective is to introduce to the students theories of quantitative gene
 
 Students will meet these objectives by a) attending lectures and understanding materials; b) studying and completing homework assignments; c) participating in in-class discussion.
 
-#### Schedule (subject to update)
+#### Schedule (subject to update)  
+
 | Week | Topics|
 |-----:|:------|
 | 1 | review of molecular genetics, Mendel’s laws, examples of genetics |
@@ -71,11 +72,11 @@ Students will meet these objectives by a) attending lectures and understanding m
 | 15 | genetic prediction |
 
 <span style="color:red">Midterm Exam: Thursday, Oct 17 12:40pm - 2:00pm in 1240 Anthony Hall (in-class), covers materials in weeks 1-6 (up to Oct 3)</span>  
-<span style="color:red">Final Exam: To be determined, covers the entire semester, with emphasis on the second part</span>
+<span style="color:red">Final Exam: Thursday, Dec 12 2019 12:45pm - 2:45pm in 1240 Anthony Hall</span>
 
 #### Grading Policy
 
-- Homework assignments: 12 weekly homework assignments, each is worth 10 points; maximum total homework points = 100 (for example, if your total homework points is 110, it will be capped at 100). Homeworks are assigned on Fridays and due the next Friday at 5 PM.
+- Homework assignments: 12 weekly homework assignments, each is worth 10 points; maximum total homework points = 100 (for example, if your total homework points is 110, it will be capped at 100). Homeworks are assigned on Thursdays and due the next Thursday at 2 PM at the end of class, except during the Thanksgiving week.
 - In-class quizzes: 15 weekly quizzes, each worth 2 points; maximum total points = 25.
 - In-class midterm exam: 50 points.
 - Final exam: 75 points.
