--- a/news/_posts/2021-09-01-postdoc.md
+++ b/news/_posts/2021-09-01-postdoc.md
@@ -1,15 +1,17 @@
 ---
-title: New postdoc position available
+title: Multiple postdoc positions available
 layout: pages
 ---
 
-### Postdoc positions available
+### Multiple postdoc positions available
 
 {{ page.date | date: "%m-%d-%Y" }}
 
-A postdoc position in statistical genetics/bioinformatics is immediately available at the Department of Animal Science, Michigan State University. Potential projects include 1) development of genotype imputation pipelines in livestock animals; 2) identification and characterization of loss-of-function mutations by whole genome sequencing; 3) development of genomic prediction methods incorporating context dependent effects. We have access to data from the 1000 bull genomes project, more than 2,500 whole genome sequences of pigs, the UK Biobank, and other types of genomic datasets. Postdocs are encouraged to develop their own projects that utilize these existing data and/or generate new data in alignment with the lab's broad directions. Salaries and benefits are competitive and will be commensurate with experience. 
+Multiple postdoc positions are available in the laboratory of Wen Huang at Michigan State University. Potential projects include: 1) mapping post-transcriptional (splicing, translation) regulation of gene expression in Drosophila; 2) massively parallel reporter assays to assess effects of DNA variants on post-transcriptional regulation in a high throughput manner; 3) development of genotype imputation pipelines in livestock animals; 4) identification and characterization of loss-of-function mutations by whole genome sequencing; 5) development of genomic prediction methods incorporating context dependent effects. Our lab uses Drosophila fruit flies, livestock animals including pigs and cattle, and data collected in human populations (e.g. UK Biobank) as research subjects and employs a combination of experimental and computational approaches. We recruit postdocs with background in either molecular biology and/or statistics/bioinformatics. Postdocs are encouraged to develop their own projects that utilize existing data in the lab and/or generate new data in alignment with the lab's broad directions. 
 
-Please inquire and/or apply by sending current CV and a brief introduction explaining background, experience and career plan to Wen Huang ([huangw53@msu.edu](mailto:huangw53@msu.edu)). References will be checked when there is mutual interest to move forward.
+Information inquiry is highly encouraged. Please apply by sending current CV and a brief introduction explaining background, experience and career plan to Wen Huang (huangw53 AT msu.edu). 
+
+
 
 
 
