--- a/news/_posts/2022-02-02-new-people-2022.md
+++ b/news/_posts/2022-02-02-new-people-2022.md
@@ -3,7 +3,7 @@ title: Welcome to new lab members!
 layout: pages
 ---
 
-### Multiple postdoc positions available
+### Welcome to new lab members!
 
 {{ page.date | date: "%m-%d-%Y" }}
 
